<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/check_box"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/training"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/paper"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_exam"
            android:icon="@drawable/exam"
            android:title="@string/menu_exam"/>
        <item
            android:id="@+id/nav_input"
            android:icon="@drawable/ic_edit"
            android:title="@string/menu_input" />
    </group>
</menu>